Combined all coin info into the first table column and made fixed in place it in place on horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body{
     background-color: rgb(19, 19, 19);
     color: white;
     font-family: 'Roboto', sans-serif;;
-}
+} 
 .top{
     display: flex;
     margin-left: auto;
@@ -66,55 +66,69 @@ h2{
     border-bottom: 1px solid rgb(126, 126, 126);
     position: sticky;
     top: 0;
+    z-index: 5;
 }
-.row{
-    border-bottom: 1px solid rgb(126, 126, 126);
-}
-.imageContent{
-    height: 25px;
-    width: 25px;
-}
-.image{
-    max-width: 25px;
-}
-.name{
-    font-weight: bold;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 620px;  
-}
-.space{
-    width:1000px;
-}
-.coinRank{
-    width:50px;
+.coinInfo{
+    background-color:#272727;
+    position: sticky;
+    z-index: 7;
+    left: 0;
+    width: 1600px;
+    min-width: 300px;
     text-align: left;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 5px;
 }
-.coinSymbol{
-    width: 110px;
-}
-.coinName{
-    min-width:20px;
-    width: 30px;
-    text-align: left;
+.coinRank{
+    padding-right: 17px
 }
 .number{
     text-align: right;
+    z-index: 6;
 }
 .coinMarketCap{
     padding-right: 5px;
+}
+.row{
+    border-bottom: 1px solid rgb(126, 126, 126);
+}
+span{
+    white-space: nowrap;
+}
+.coin{
+    background-color: rgb(19, 19, 19);
+    position: sticky;
+    z-index: 4;
+    left: 0;
+    overflow: hidden;
+    padding-top: 17px;
+    padding-bottom: 17px;
+}
+.rank{
+    padding-left: 4px;
+    padding-right: 30px;
+    vertical-align: sub;
+}
+.imageContent{
+    height: 25px;
+    width: 25px;
+    padding-right: 10px;
+    vertical-align: middle;
+}
+.name{
+    font-weight: bold;
+    vertical-align:sub;
 }
 .symbol{
     color:#9e9a9a;
     font-size: 13px;
     font-weight: bold;
     padding-left: 10px;
-    
+    vertical-align: sub;
 }
 .num{
+    z-index: 1;
     font-size: 14px;
     text-align: right;
     width: 600px;
